--- a/.github/workflows/gh-cd.yml
+++ b/.github/workflows/gh-cd.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - name: 'Installing deps'    
-      run: npm i
+      run: npm ci
     - name: 'Build'
       run: npm run build
     - name: 'Deploy'
